errors.txt
cargo :     Checking 
utaularia v0.1.0 
(C:\Users\Celio 
Coord I\Documents\Git
Hub\UTAULARIA)
No linha:1 
caractere:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 errors.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : 
NotSpecified:     (  
  Checking ut...t    
Hub\UTAULARIA):Strin 
   g) [], 
RemoteExcepti    on
    + 
FullyQualifiedErro   
 rId : 
NativeCommandE    
rror
 
error[E0063]: 
missing field 
`validation_report` 
in initializer of 
`UtaulariaApp`
  --> src\app.rs:13:9
   |
13 |         Self {
   |         ^^^^ 
missing 
`validation_report`

For more information 
about this error, 
try `rustc --explain 
E0063`.
error: could not 
compile `utaularia` 
(bin "utaularia") 
due to 1 previous 
error
